--- a/index.html
+++ b/index.html
@@ -16,54 +16,68 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
+            <ul class="navbar-nav ml-auto">
+
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Plots
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Max Temperature</a>
-                    <a class="dropdown-item" href="#">Humidity</a>
-                    <a class="dropdown-item" href="#">Cloudiness</a>
-                    <a class="dropdown-item" href="#">Wind Speed</a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="max_temperature.html">Max Temperature</a>
+                        <a class="dropdown-item" href="humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="wind_speed.html">Wind Speed</a>
 
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+                        <div class="dropdown-divider"></div>
+                    </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Comparison</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Data</a>
               </li>
             </ul>
           </div>
         </nav>
 
-
-
-
-
-
-
-
     </nav>
 
+    <section class="row">
+        <div class="container">
+            <div class="summary">
+            <h1 class="display-4">Summary: Latitude vs. X</h1>
+            <p class="imgAbt">
+                <img src="assets/City Latitude vs. Max Temperature (F).png"/>
+                </p>
+            <hr class="my-4">
+            <p>The purpose of this project was to analyze how weather changes
+                as you get closer to the equator. To accomplish this analysis, we
+                first pulled data from the OpenWeatherMap API to assemble a
+                dataset on over 500 cities.
+                <p>
 
+                </p>
+                After assembling the dataset, we used Matplotlib to plot various
+                aspects of the weather vs. latitude. Factors we looked at included:
+                temperature, cloudiness, wind speed, and humidity. This site provides the source data and
+                visualizations created as part of the analysis, as well as explanations and descriptions of any
+                trends and correlations witnessed.
+                </p>
+            </div>
+        </div>
+        <div class="sidebar cik-md-4 col-md-4">
+            <h1 class="title">Visualizations</h1>
+            <div class="plots">
+                <a href="max_temperature.html"><img src="assets/City Latitude vs. Max Temperature (F).png" alt="Lat vs. Max Temp (F)" width=250 height=200></a>
+                <a href="humidity.html"><img src="assets/City Latitude vs. Humidity (%).png" alt="Lat vs. Humidity (%)" width=250 height=200>></a>
+                <a href="cloudiness.html"><img src="assets/City Latitude vs. Cloudiness (%).png" alt="Lat vs. Cloudiness (%)" width=250 height=200>></a>
+                <a href="wind_speed.html"><img src="assets/City Latitude vs. Wind Speed (mph).png" alt="Lat vs. Wind Speed (MPH)" width=250 height=200>></a>
+            </div>
 
-    <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-1"></div>
-        <div class="col-md-5">Summary: Latitude vs. X</div>
-
-
-
-    </div>
-
-
-
+        </div>
+      
+    </section>
 
 
 </body>
